Rebase our directories

--- a/SVR/svr.ipynb
+++ b/SVR/svr.ipynb
@@ -74,8 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_raw = pd.read_csv('final_data/train_df.csv')\n",
-    "test_raw = pd.read_csv('final_data/test_df.csv')"
+    "train_raw = pd.read_csv('../data/train_df.csv')\n",
+    "test_raw = pd.read_csv('../data/test_df.csv')"
    ]
   },
   {
@@ -764,7 +764,7 @@
     "grid.fit(train_X, train_y)\n",
     "\n",
     "# save the model if desired\n",
-    "save_model(grid, \"1_step.model\")"
+    "save_model(grid, \"models/1_step.model\")"
    ]
   },
   {
@@ -814,7 +814,7 @@
    ],
    "source": [
     "# load the model saved model if trained already\n",
-    "grid = load_model(\"1_step.model\")\n",
+    "grid = load_model(\"models/1_step.model\")\n",
     "\n",
     "train_pred = grid.predict(train_X)\n",
     "train_pred = inverse_scale(train_pred, \"pm\", train_raw)\n",
@@ -1036,7 +1036,7 @@
     "grid.fit(train_X, train_y)\n",
     "\n",
     "# save the model if desired\n",
-    "save_model(grid, \"3_step.model\")"
+    "save_model(grid, \"models/3_step.model\")"
    ]
   },
   {
@@ -1066,7 +1066,7 @@
    ],
    "source": [
     "# load saved model\n",
-    "grid = load_model(\"3_step.model\")\n",
+    "grid = load_model(\"models/3_step.model\")\n",
     "\n",
     "train_pred = grid.predict(train_X)\n",
     "train_pred = inverse_scale(train_pred, \"pm\", train_raw)\n",
@@ -1293,7 +1293,7 @@
     "grid.fit(train_X, train_y)\n",
     "\n",
     "# save the model if desired\n",
-    "save_model(grid, \"5_step.model\")"
+    "save_model(grid, \"models/5_step.model\")"
    ]
   },
   {
@@ -1323,7 +1323,7 @@
    ],
    "source": [
     "# load saved model\n",
-    "grid = load_model(\"5_step.model\")\n",
+    "grid = load_model(\"models/5_step.model\")\n",
     "\n",
     "train_pred = grid.predict(train_X)\n",
     "train_pred = inverse_scale(train_pred, \"pm\", train_raw)\n",
